# Hexxagon-Game-Plutarch

./: .gitignore  CHANGELOG.md  Hexxagon-Game-Plutarch.cabal  NIX-INSTALLATION.md  README.md  flake.nix  prompt.sh
Scripts/: InitialiseGameSC.hs  PlayerIdentifierMP.hs  RefNFTManagerSC.hs  RunGameSC.hs
app/: Main.hs
src/: PDataTypes.hs  PUtilities.hs
test/: Main.hs
test/UnitTesting/: TConstants.hs  TestInitialiseGameSC.hs  TestRefNFTManagerSC.hs  TestRunGameSC.hs  Tools.hs
